--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <ul>
                 <li>Programming: Java, Python, R</li>
                 <li>Neural Network Framework: PyTorch</li>
+                <li>Statistical Approach: Hypothesis Testing, Regression Analysis, Applied 
+                    Experimental design, Univariate Analysis, Non-parametric Analysis, 
+                    Multivariate Analysis, Factor analysis, Clustering, SEM</li>
                 <li>Statistical Analysis: SPSS, SAS</li>
                 <li>Machine Learning: Computer Vision, Natural Language Processing</li>
             </ul>
