--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     University of Nebraska Omaha, Nebraska, USA (2021 – Present, Expected April 2025)
                 </li>
                 <li>
-                    <strong>Master's in Computer Science</strong> (Cum Laude, GPA: 9.9/10)<br>
+                    <strong>Master's in Computer Science</strong> (Cum Laude, CGPA: 9.9/10)<br>
                     Instituto Politécnico Nacional, Mexico City, Mexico (2019 – 2021)
                 </li>
                 <li>
